--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,46 @@
     </head>
     <body>
         <h1>Brenda's Lasagna</h1>
+        <img src="../image/lasagna.jpeg">
+            <h2>Description</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                tempor incididunt ut labore et dolore magna aliqua. At in tellus integer 
+                feugiat. Tincidunt arcu non sodales neque sodales ut. Augue eget arcu dictum 
+                varius duis at consectetur lorem donec. Id venenatis a condimentum vitae sapien 
+                pellentesque habitant morbi. Egestas integer eget aliquet nibh praesent tristique 
+                magna sit amet. Auctor augue mauris augue neque gravida in. Bibendum neque egestas 
+                congue quisque egestas diam in arcu cursus. Feugiat scelerisque varius morbi enim 
+                nunc faucibus a pellentesque sit.
+            </p>
+
+            <p>Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque sit. 
+                At in tellus integer feugiat scelerisque varius morbi enim nunc. 
+                Eu ultrices vitae auctor eu augue ut lectus. Sit amet aliquam id diam 
+                maecenas ultricies. Eu consequat ac felis donec et. Sed elementum tempus 
+                egestas sed. Lorem sed risus ultricies tristique nulla aliquet enim tortor.
+                 Ornare lectus sit amet est. Nascetur ridiculus mus mauris vitae ultricies. 
+                 Nulla facilisi cras fermentum odio eu feugiat pretium. Id venenatis a 
+                 condimentum vitae sapien.
+            </p>
+
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1 (16 ounce) package lasagna noodles </li>
+                <li>1 pound lean ground beef </li>
+                <li>salt and pepper to taste </li>
+                <li>1 (16 ounce) jar spaghetti sauce </li>
+                <li>1 clove garlic, minced </li>
+                <li>½ pound shredded mozzarella cheese </li>
+                <li>½ pound shredded Cheddar cheese </li>
+                <li>1 pint ricotta cheese </li>
+            </ul>
+
+            <h2>Steps</h2>
+            <ol>
+                <li> Step 1: Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</li>
+                <li> Step 2: Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
+                <li> Step 2: reheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
+                <li> Step 4: Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
+            </ol>
     </body>
 </html>
